kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: crud-nodejs
  template:
    metadata:
      labels:
        app: crud-nodejs
    spec:
      containers:
        - name: app
          image: febriyanadji/crud-nodejs:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "64m"
            limits:
              memory: "128Mi"
              cpu: "128m"
          ports:
            - containerPort: 3000
