kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-nodejs
spec:
  type: LoadBalancer
  selector:
    app: crud-nodejs
  ports:
    - port: 80
      targetPort: 3000
