kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-nodejs
spec:
  selector:
    matchLabels:
      app: crud-nodejs
  template:
    metadata:
      labels:
        app: crud-nodejs
    spec:
      containers:
        - name: app
          image: febriyanadji/crud-nodejs
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: crud-nodejs
spec:
  type: LoadBalancer
  selector:
    app: crud-nodejs
  ports:
    - port: 3000
      targetPort: 3000
