kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-nodejs
spec:
  # ingressClassName: nginx
  defaultBackend:
    service:
      name: crud-nodejs
      port:
        number: 3000
  rules:
    - host: crud-nodejs.febriyan.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crud-nodejs
                port:
                  number: 3000
